# 2190512-Application-Development-Project

./: .gitignore  Admin.js  App.js  App.tsx  Authenticate.js  README.md  api-key.d.ts  checkbox.js  component.js  download.js  driving.js  dropdown.js  firebase-config.js  package-lock.json  package.json  plateDatabase_temp.js  pnpm-lock.yaml  styles.js  tsconfig.json
api/: .env.example  app.py  manage.py  pyproject.toml
api/core/: config.py  db.py  migrations.py  realtime.py  security.py
api/models/: __init__.py  enums.py  plate.py  session.py  user.py
api/models/migrations/: 0001_initial.py  0002_auto_20260422_0610.py
api/routes/: __init__.py  auth.py  plate_locks.py  plates.py  schemas.py  sessions.py  submissions.py  templates.py  usage.py  ws.py
assets/: DatabaseTemplate.xlsx
src/: styles.ts
src/api/: auth.ts  client.ts  plateLocks.ts  plates.ts  sessionBlobs.ts  sessions.ts  usage.ts
src/components/: CheckBoxWrapper.tsx
src/screens/: Admin.tsx  Authenticate.tsx  Driving.tsx  Primary.tsx
src/types/: domain.ts  navigation.ts  shims.d.ts
